Fixed layout issues + added dialogs

--- a/cms-client/src/app/components/home/home.component.scss
+++ b/cms-client/src/app/components/home/home.component.scss
@@ -86,6 +86,8 @@
     }
     .data-card-header {
         padding: 12px;
+        flex-grow: 0;
+        flex-shrink:0;
         .data-card-title {
             font-size: 16px;
         }
@@ -109,4 +111,19 @@
 .actions-header {
     padding-right: 0 !important;
     width: 100px;
+}
+
+.card-barrier-div {
+    width: 100%;
+    padding-bottom: 56px;
+    @media screen and (max-width: 600px) {
+        padding-bottom: 0;
+    }
+}
+
+.empty-message {
+    font-size: 16px;
+    height: 100px;
+    color: grey;
+    font-weight: bold;
 }
